--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -12,16 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.report.ReportFragment">
+        <TextView
+            android:id="@+id/tvReport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/report"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginVertical="24dp"
+            android:layout_marginStart="20dp"
+            android:textSize="20sp"
+            android:fontFamily="@font/avenir_next_lt_pro"
+            android:textStyle="bold"
+            android:textColor="@color/bluegray_500" />
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etMonth"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="12dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="12dp"
             app:boxStrokeColor="@color/orange_400"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvReport"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/etYear"
             android:hint="@string/month">
@@ -34,7 +47,8 @@
                 android:fontFamily="@font/avenir_next_lt_pro"
                 android:text="@={viewModel.month}"
                 android:textColor="@color/black"
-                android:inputType="none"/>
+                android:inputType="none"
+                android:hint="@string/month"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -42,11 +56,11 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="24dp"
             app:boxStrokeColor="@color/orange_400"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/etMonth"
+            app:layout_constraintBottom_toBottomOf="@id/etMonth"
             app:layout_constraintStart_toEndOf="@id/etMonth"
             app:layout_constraintEnd_toEndOf="parent"
             android:hint="@string/year">
@@ -59,7 +73,8 @@
                 android:fontFamily="@font/avenir_next_lt_pro"
                 android:text="@={viewModel.year}"
                 android:textColor="@color/black"
-                android:inputType="none" />
+                android:inputType="none"
+                android:hint="@string/year"/>
         </com.google.android.material.textfield.TextInputLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/ordersRecyclerView"
