--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -65,6 +65,9 @@
             android:name="orderSelected"
             app:argType="xyz.daijoubuteam.foodshoppingappadmin.model.Order">
         </argument>
+        <action
+            android:id="@+id/action_editOrderFragment_to_navigation_orders"
+            app:destination="@id/navigation_orders" />
     </fragment>
     <fragment
         android:id="@+id/navigation_profile"
@@ -100,5 +103,8 @@
         <argument
             android:name="orderSelected"
             app:argType="xyz.daijoubuteam.foodshoppingappadmin.model.Order" />
+        <action
+            android:id="@+id/action_orderDetailFragment_to_navigation_report"
+            app:destination="@id/navigation_report" />
     </fragment>
 </navigation>
