add select location

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -119,6 +119,43 @@
                         tools:text="1am - 2am"
                         android:text="@={viewModel.eatery.work_time}"/>
                 </com.google.android.material.textfield.TextInputLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_address_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/etEateryWorktime"
+                    app:layout_constraintStart_toStartOf="parent">
+                    <TextView
+                        android:id="@+id/tvEateryAddress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:text="@string/eatery_address"
+                        android:textSize="20sp"/>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_change_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="@id/tvEateryAddress"
+                        app:layout_constraintBottom_toBottomOf="@id/tvEateryAddress"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:backgroundTint="@color/white"
+                        android:insetTop="0dp"
+                        android:stateListAnimator="@null"
+                        android:insetBottom="0dp"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textAllCaps="true"
+                        android:textColor="@color/orange_400"
+                        android:textFontWeight="400"
+                        android:textSize="16sp"
+                        tools:ignore="UnusedAttribute"
+                        android:text="@string/change"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etEateryAddress"
@@ -133,7 +170,7 @@
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/etEateryWorktime">
+                    app:layout_constraintTop_toBottomOf="@id/cl_address_header">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
