--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -33,7 +33,7 @@
             android:id="@+id/tvReviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="24dp"
+            android:layout_marginVertical="16dp"
             android:layout_marginStart="20dp"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:text="@string/reviews"
@@ -47,14 +47,14 @@
             android:id="@+id/reviewsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="4dp"
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvReviews"
+            app:layout_constraintTop_toBottomOf="@id/imageChevronleft"
             tools:itemCount="10"
             tools:listitem="@layout/item_review" />
     </androidx.constraintlayout.widget.ConstraintLayout>
