--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -38,7 +38,7 @@
             android:fontFamily="@font/avenir_next_lt_pro"
             android:text="@string/eatery_information"
             android:textSize="24sp"
-            android:layout_marginTop="16dp"
+            android:layout_marginVertical="16dp"
             app:layout_constraintStart_toEndOf="@id/imageChevronleft"
             app:layout_constraintTop_toTopOf="parent" />
         <androidx.core.widget.NestedScrollView
@@ -46,9 +46,9 @@
             android:orientation="vertical"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvEateryInformation"
+            app:layout_constraintTop_toBottomOf="@id/imageChevronleft"
             app:layout_constraintBottom_toTopOf="@id/btn_save"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="10dp">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -178,26 +178,40 @@
                         tools:text="KTX Khu A"
                         android:text="@={viewModel.eatery.addressEatery.address}" />
                 </com.google.android.material.textfield.TextInputLayout>
-
-                <ImageView
-                    android:id="@+id/img_description"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_image"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:scaleType="fitXY"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginHorizontal="24dp"
                     app:layout_constraintHeight_percent="0.33"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/etEateryAddress"
-                    tools:src="@drawable/ic_orange_and_white_polygon_background_template_design"
-                    app:imageUrl="@{viewModel.eatery.photoUrl}"/>
+                    app:layout_constraintStart_toStartOf="parent">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="24dp"
+                        app:cardCornerRadius="8dp">
+                        <ImageView
+                            android:id="@+id/img_description"
+                            android:scaleType="fitXY"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            tools:src="@drawable/ic_orange_and_white_polygon_background_template_design"
+                            app:imageUrl="@{viewModel.eatery.photoUrl}"/>
+                    </androidx.cardview.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_select_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/img_description"
+                    app:layout_constraintTop_toBottomOf="@id/cl_image"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
                     android:layout_marginHorizontal="24dp"
                     android:layout_marginTop="12dp"
                     android:backgroundTint="@color/lightOrange"
@@ -214,17 +228,14 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
-
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="8dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="10dp"
             android:backgroundTint="@color/blue_A200"
             android:insetTop="0dp"
             android:insetBottom="0dp"
