--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -13,43 +13,50 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         tools:context=".ui.report.orderdetail.OrderDetailFragment">
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/imageChevronleft"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_order_detail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            app:backgroundTint="#4DFFFFFF"
-            app:borderWidth="0dp"
-            app:elevation="0dp"
-            app:layout_constraintBottom_toBottomOf="@id/tvOrder"
+            android:layout_marginVertical="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tvOrder"
-            app:pressedTranslationZ="0dp"
-            app:srcCompat="@drawable/img_chevronleft"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/tvOrder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:fontFamily="@font/avenir_next_lt_pro"
-            android:text="@string/order_detail"
-            android:textSize="24sp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toEndOf="@id/imageChevronleft"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/imageChevronleft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                app:backgroundTint="#4DFFFFFF"
+                app:borderWidth="0dp"
+                app:elevation="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/tvOrder"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvOrder"
+                app:pressedTranslationZ="0dp"
+                app:srcCompat="@drawable/img_chevronleft"
+                tools:ignore="ContentDescription" />
+            <TextView
+                android:id="@+id/tvOrder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/avenir_next_lt_pro"
+                android:text="@string/order_detail"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@id/imageChevronleft"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/tvCustomerName"
             android:ellipsize="end"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:singleLine="true"
-            app:layout_constraintTop_toBottomOf="@id/tvOrder"
+            app:layout_constraintTop_toBottomOf="@id/cl_order_detail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:textSize="16sp"
             android:textColor="@color/bluegray_700"
             android:fontFamily="@font/avenir_next_lt_pro"
