--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -143,7 +143,7 @@
                     android:textColor="@color/deep_orange_A200"
                     android:textStyle="bold"
                     android:textSize="20sp"
-                    android:text="@{viewModel.totalRevenueLabel}"/>
+                    android:text="@{'$' + viewModel.totalRevenue.toString()}"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
