--- a/app/src/main/res/layout/fragment_select_location.xml
+++ b/app/src/main/res/layout/fragment_select_location.xml
@@ -24,8 +24,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/select"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/select_map"
-            android:layout_margin="20dp" />
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="12dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
