--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -86,9 +86,6 @@
             android:name="eateryAddress"
             app:argType="xyz.daijoubuteam.foodshoppingappadmin.model.EateryAddress"
             app:nullable="true" />
-        <action
-            android:id="@+id/action_editProfileFragment_to_navigation_profile"
-            app:destination="@id/navigation_profile" />
     </fragment>
     <fragment
         android:id="@+id/orderDetailFragment"
@@ -109,7 +106,9 @@
             android:defaultValue="@null" />
         <action
             android:id="@+id/action_selectLocationFragment_to_editProfileFragment"
-            app:destination="@id/editProfileFragment" />
+            app:destination="@id/editProfileFragment"
+            app:popUpTo="@id/editProfileFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/navigation_events"
