--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -6,7 +6,6 @@
         <variable
             name="product"
             type="xyz.daijoubuteam.foodshoppingappadmin.model.Product" />
-        <import type="android.view.View"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
@@ -94,36 +93,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="HardcodedText,UnusedAttribute"
-                android:text="@{'$' + Double.toString(product.newPrice)}"
+                android:text="@{'$' + Double.toString(product.price)}"
                 tools:text="$ 12.00" />
-            <TextView
-                android:id="@+id/tvOldPrice"
-                android:ellipsize="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="1dp"
-                android:layout_marginStart="20dp"
-                android:singleLine="true"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/tvNewPrice"
-                android:textColor="@color/gray_500"
-                android:textSize="12sp"
-                android:fontFamily="@font/avenir_next_lt_pro"
-                android:textFontWeight="500"
-                android:visibility="@{product.oldPrice == null ? View.GONE : View.VISIBLE}"
-                android:text="@{'$' + Double.toString(product.oldPrice)}"
-                tools:text="$ 20.00"
-                tools:ignore="HardcodedText,UnusedAttribute" />
-            <View
-                android:background="@drawable/rectangle_border_gray_500"
-                android:id="@+id/viewLine"
-                android:layout_height="2dp"
-                android:layout_width="0dp"
-                app:layout_constraintTop_toTopOf="@+id/tvOldPrice"
-                app:layout_constraintBottom_toBottomOf="@+id/tvOldPrice"
-                app:layout_constraintStart_toStartOf="@+id/tvOldPrice"
-                app:layout_constraintEnd_toEndOf="@id/tvOldPrice" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
