--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -26,11 +26,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="16sp"
-            android:textColor="@color/bluegray_700"
+            android:textSize="18sp"
+            android:textColor="@color/orange_400"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textFontWeight="600"
-            android:text="@{order.customerName}"
+            android:text="@{order.shippingAddress.name}"
             tools:text="Đỗ Phú Quang"
             tools:ignore="HardcodedText,UnusedAttribute" />
         <TextView
@@ -67,6 +67,7 @@
             android:textSize="13sp"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textFontWeight="500"
+            android:text="@{order.shippingAddress.address}"
             tools:text="Địa chỉ: KTX Khu A, ĐHQG TP.HCM"
             tools:ignore="UnusedAttribute" />
     </androidx.constraintlayout.widget.ConstraintLayout>
