--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -30,7 +30,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="12dp"
             app:boxStrokeColor="@color/orange_400"
@@ -81,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="4dp"
             app:layout_constraintTop_toBottomOf="@id/etMonth"
             app:layout_constraintBottom_toTopOf="@id/cvSummary"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,11 +97,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp"
-            android:layout_marginHorizontal="24dp">
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginBottom="16dp">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="24dp">
+                android:padding="20dp">
                 <TextView
                     android:id="@+id/tvTextTotalOrders"
                     android:layout_width="wrap_content"
