--- a/app/src/main/res/layout/item_product_in_order.xml
+++ b/app/src/main/res/layout/item_product_in_order.xml
@@ -12,9 +12,6 @@
         android:layout_width="match_parent"
         android:padding="16dp"
         tools:ignore="ExtraText"
-        android:elevation="4dp"
-        android:clickable="true"
-        android:focusable="true"
         android:background="?attr/selectableItemBackground">
         <androidx.cardview.widget.CardView
             android:id="@+id/cardProductAvatar"
@@ -29,7 +26,7 @@
                 android:layout_height="90dp"
                 android:layout_width="90dp"
                 android:scaleType="fitCenter"
-                app:imageUrl="@{product.product.img}"
+                app:imageUrl="@{product.productImg}"
                 tools:src="@drawable/img_rectangle44"
                 tools:ignore="ContentDescription" />
         </androidx.cardview.widget.CardView>
@@ -47,7 +44,7 @@
             android:textColor="@color/bluegray_700"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textFontWeight="400"
-            android:text="@{product.product.name}"
+            android:text="@{product.productName}"
             tools:text="Shrimp Pizza"
             tools:ignore="HardcodedText,UnusedAttribute" />
         <TextView
@@ -65,7 +62,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             tools:ignore="HardcodedText,UnusedAttribute"
-            android:text="@{product.price.toString()}"
+            android:text="@{product.productPrice.toString()}"
             tools:text="$ 12.00" />
         <TextView
             android:id="@+id/tvQuantity"
